--- a/src/App.css
+++ b/src/App.css
@@ -14,10 +14,10 @@ article {
 
 #section {
     margin: 0 auto;
-    margin-top: 4rem;
-    width: 80vw;
+    margin-top: 0rem;
+    width: 100%;
     /* have to have a height */
-    height: 450px;
+    height: 400px;
     max-width: 800px;
     text-align: center;
     position: relative;
@@ -62,8 +62,8 @@ article#nextSlide {
 
 .image {
     margin: 0 auto;
-    margin-top: 4rem;
-    width: 60vw;
+    margin-top: 0rem;
+    width: 100%;
     /* have to have a height */
     height: 450px;
     max-width: 800px;
