--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ article {
     margin-top: 0rem;
     width: 100%;
     /* have to have a height */
-    height: 400px;
+    height: 200px;
     max-width: 800px;
     text-align: center;
     position: relative;
@@ -41,7 +41,7 @@ article#nextSlide {
 .next,
 .prev {
     position: absolute;
-    top: 200px;
+    top: 100px;
     transform: translateY(-50%);
     width: 1.25rem;
     height: 1.25rem;
@@ -65,12 +65,11 @@ article#nextSlide {
     margin-top: 0rem;
     width: 100%;
     /* have to have a height */
-    height: 450px;
     max-width: 800px;
     text-align: center;
     position: relative;
     display: flex;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 @keyframes slowLoad {
