--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ article {
     margin-top: 0rem;
     width: 100%;
     /* have to have a height */
-    height: 200px;
+    height: 300px;
     max-width: 800px;
     text-align: center;
     position: relative;
@@ -41,7 +41,7 @@ article#nextSlide {
 .next,
 .prev {
     position: absolute;
-    top: 100px;
+    top: 150px;
     transform: translateY(-50%);
     width: 1.25rem;
     height: 1.25rem;
@@ -60,17 +60,15 @@ article#nextSlide {
     right: 0;
 }
 
-.image {
-    margin: 0 auto;
-    margin-top: 0rem;
+/* .image {
     width: 100%;
     /* have to have a height */
-    max-width: 800px;
+    /* max-width: 800px;
     text-align: center;
     position: relative;
-    display: flex;
+    display: flex; */
     /* overflow: hidden; */
-}
+/* }  */
 
 @keyframes slowLoad {
     0% {
